--- a/app/ToDo.txt
+++ b/app/ToDo.txt
@@ -1,6 +1,6 @@
 
 fix the new order
-5-add/update coin
+5-amake the coin price float
 6-add/update calculation (remove the edit and make a show blade)
 7-new table for confirming calcolation
 8-make soft delete for calculation and other table
